Fixed mobile menu visibility

--- a/src/styles/components/header/Header.less
+++ b/src/styles/components/header/Header.less
@@ -79,8 +79,9 @@ header {
   width: 100%;
   z-index: 20;
   position: fixed;
+  visibility: hidden;
   left: -100vw;
-  transition: left 0.5s;
+  transition: 0.5s;
 
   > ul {
     display: flex;
